--- a/css/main.css
+++ b/css/main.css
@@ -89,8 +89,19 @@ body{
     height: 300px;
     background: gray;
     
+    }
+
+.noticias .caja p{
+   
+    text-align: center;
+    padding: 120px;
+    font-size: 18px;
+    
+    
+    
     
     }
+
 
 .noticias .blanca{
     background-color: white;
